--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+ themes: light --default, dark --prefersdark;
+ themes: light --default;
+}
+
+
+.active{
+    text-decoration: underline;
+}
